fix(*): fix body overflow

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -31,12 +31,13 @@ html {
   font-size: var(--fs);
   font-family: var(--font);
   text-underline-offset: 4px;
-  width: 100vw;
+  max-width: 100vw;
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 
 h1 {
